<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CineReminDay</string>

    <!-- Description text on images for accessibility -->
    <string name="accessibility_application_settings">Application settings</string>
    <string name="accessibility_status">Status</string>
    <string name="accessibility_schedule_state">Schedule state</string>
    <string name="accessibility_permission">Permission</string>
    <string name="accessibility_permission_state">Permission state</string>
    <string name="accessibility_confirm_message_sending">Confirm message sending</string>
    <string name="accessibility_cineday_code">Cineday code</string>
    <string name="accessibility_share_code">Share code</string>
    <string name="accessibility_ask_code">Ask code</string>

    <!-- Status cardview -->
    <string name="main_dashboard_status_error_permission_missing">Status : Need permission</string>
    <string name="main_dashboard_status_error_permission_missing_message">Need SMS sending permission.</string>
    <string name="main_dashboard_status_error_review_sms_message">Status : Review SMS message</string>
    <string name="main_dashboard_status_error_review_sms_message_message">Please review and accept the content and time of the SMS sending. </string>
    <string name="main_dashboard_status_scheduled">Status : Scheduled</string>
    <string name="main_dashboard_status_scheduled_message">All set, code will be retrieved in %s.</string>
    <string name="main_dashboard_status_waiting_for_orange">Status : Waiting for Orange</string>
    <string name="main_dashboard_status_waiting_for_orange_message">SMS sent, waiting for Orange to grant Cineday code…</string>
    <string name="main_dashboard_status_code_ok">Status : Enjoy your film !</string>
    <string name="main_dashboard_status_code_ok_message">If you like the app, please rate it on the store ! ☺</string>
    <string name="main_dashboard_status_unknown_error">Status : Unknown error</string>
    <string name="main_dashboard_status_unknown_error_message">That\'s bad.</string>
    <string name="main_dashboard_status_retry_button">Retry</string>
    <string name="main_dashboard_status_visit_store_button">Rate app on Store</string>

    <!-- Permission cardview -->
    <string name="main_dashboard_sms_permission">SMS Permission :</string>
    <string name="main_dashboard_sms_permission_message">I need to send one SMS to Orange Cineday service, on Tuesday morning, to retrieve the code. One SMS / week. No additionnal charge.</string>
    <string name="main_dashboard_sms_permission_button">Grant permission</string>

    <!-- SMS content confirmation -->
    <string name="main_dashboard_message_to_orange">Message to send</string>
    <string name="main_dashboard_message_to_orange_content">A SMS will be sent on tuesday morning. You have to confirm your agreement before everything is set up !\n\n-------\nTo : <b>20 000</b> (Orange)\n-------\nContent : <b>cine</b>\n-------\n\nPlease confirm, no charge (except from standard SMS send)</string>
    <string name="main_dashboard_message_to_orange_i_accept">I accept</string>

    <!-- Cineday code cardview -->
    <string name="main_dashboard_cineday_code">Cineday code :</string>
    <string name="main_dashboard_cineday_code_note">Redeemable today only !</string>

    <!-- Thank sharing user -->
    <string name="main_dashboard_you_are_awesome">You are awesome</string>
    <string name="main_dashboard_you_are_awesome_message">Thanks for sharing your code with a stranger ! Have a nice day ☺</string>

    <!-- Cineday code sharing with community / friend cardview -->
    <string name="main_dashboard_share_cineday_code">Share your Cineday code :</string>
    <string name="main_dashboard_share_cineday_code_message">You won\'t go to the cinema tonight ? Make someone happy and share your code this week. Free karma for you !</string>
    <string name="main_dashboard_share_cineday_code_button_community">Share with community</string>
    <string name="main_dashboard_share_cineday_code_button_friend">Share with a friend</string>
    <string name="sms_default_message">Hey ! Do you want to go to the cinema with your friend today ? Here\'s my code : %s, use it for free ! Credit/App : CineReminDay</string>

    <!-- Cineday ask code to community cardview -->
    <string name="main_dashboard_ask_code_cineday_code">Need a code for today ?</string>
    <string name="main_dashboard_ask_code_cineday_code_message">Ask the community to share one of their code with you !</string>
    <string name="main_dashboard_ask_code_button">Ask code</string>
    <string name="no_available_cineday_code">No available Cineday code at the moment. Try later.</string>

    <!-- Cineday ask code to community cardview -->
    <string name="main_dashboard_wrong_carrier">You are not on an Orange network</string>
    <string name="main_dashboard_wrong_carrier_message">The Orange Cineday offer is only available for Orange customers. It seems you are on another network carrier and the code retrieval may not work.\nPS : don\'t worry, you\'ll still be able to ask a code to the community !</string>

    <!-- Time convert -->
    <string name="unknown_amount_of_time">an unknown amount of time</string>
    <string name="less_than_a_minute">less than a minute</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="and">and</string>

    <!-- Debug -->
    <string name="open_debug_menu">Open debug menu</string>
</resources>
