<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_dashboard_item_cv_status"
    style="@style/CardView.Dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/main_dashboard_item_status_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/accessibility_status"
                android:src="@drawable/ic_event_white_48dp"
                />

            <View
                android:id="@+id/main_dashboard_item_status_separator"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="-8dp"
                android:layout_alignBottom="@+id/main_dashboard_item_status_ll_text"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/main_dashboard_item_status_iv"
                android:background="@color/divider"
                />

            <ImageView
                android:id="@+id/main_dashboard_item_status_iv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/accessibility_schedule_state"
                android:src="@drawable/ic_error_outline_white_36dp"
                />

            <LinearLayout
                android:id="@+id/main_dashboard_item_status_ll_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/main_dashboard_item_status_separator"
                android:layout_toStartOf="@id/main_dashboard_item_status_iv_status"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/main_dashboard_item_status_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/main_dashboard_status_error_permission_missing"
                    />

                <TextView
                    android:id="@+id/main_dashboard_item_status_tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_dashboard_status_error_permission_missing_message"
                    />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/main_dashboard_item_status_btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_dashboard_status_retry_button"
            />

        <Button
            android:id="@+id/main_dashboard_item_status_btn_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_dashboard_status_visit_store_button"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>