<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_dashboard_item_cv_permission"
    style="@style/CardView.Dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/main_dashboard_item_permission_iv_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/accessibility_permission"
                android:src="@drawable/ic_perm_phone_msg_white_48dp"
                />

            <View
                android:id="@+id/main_dashboard_item_permission_separator"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_alignBottom="@+id/main_dashboard_item_permission_ll_text"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/main_dashboard_item_permission_iv_permission"
                android:background="@color/divider"
                />

            <ImageView
                android:id="@+id/main_dashboard_item_permission_iv_permission_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/accessibility_permission_state"
                android:src="@drawable/ic_error_outline_white_36dp"
                />

            <LinearLayout
                android:id="@+id/main_dashboard_item_permission_ll_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/main_dashboard_item_permission_separator"
                android:layout_toStartOf="@id/main_dashboard_item_permission_iv_permission_state"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/main_dashboard_sms_permission"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_dashboard_sms_permission_message"
                    />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/main_dashboard_item_permission_btn_grant_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_dashboard_sms_permission_button"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>